--- a/events.html
+++ b/events.html
@@ -46,7 +46,7 @@
 
                     <div class="event">
 
-                        <img src="" alt="">
+                        <img src="/assets/PSDC - Poster.png" alt="" >
 
                         <div>
 
@@ -54,13 +54,59 @@
                         <p>Time: 10:30 AM -12:00 PM</p>
                         <p>Venue: Seminar Hall, Dept of Computer Science and Business Systems</p>
 
-                        <button>View More <i class="bi bi-caret-right-fill"></i></button>
+
+                        </div>
+
+                    </div>
+
+                    <div class="event">
+
+                        <img src="/assets/coc_poster.png" alt="">
+
+                        <div>
+
+                        <h2>The Coding society <br> Inaugration</h2>
+                        <p>Time: 10:30 AM -12:00 PM</p>
+                        <p>Venue: Seminar Hall, Dept of Computer Science and Business Systems</p>
+
+
+                        </div>
+
+                    </div>
+
+                    <div class="event">
+
+                        <img src="/assets/cint_poster.png" alt="">
+
+                        <div>
+
+                        <h2>Career in Tech<br> Inaugration</h2>
+                        <p>Time: 10:30 AM -12:00 PM</p>
+                        <p>Venue: Seminar Hall, Dept of Computer Science and Business Systems</p>
 
                         </div>
 
                     </div>
 
                 </div>
+
+                </div>
+
+                <div class="showbanner" id="showbanner1">
+
+                    <img src="/assets/PSDC - Poster.png" alt="">
+
+                </div>
+
+                <div class="showbanner" id="showbanner2">
+
+                    <img src="/assets/PSDC - Poster.png" alt="">
+
+                </div>
+
+                <div class="showbanner" id="showbanner3">
+
+                    <img src="/assets/PSDC - Poster.png" alt="">
 
                 </div>
             
