--- a/index.html
+++ b/index.html
@@ -43,18 +43,15 @@
                 <div>
 
                     <h1>PANIMALAR</h1>
-                    <p>STUDENT DEVELOPMENT COMMUNITY</p>
+                    <h2>STUDENT DEVELOPMENT COMMUNITY</h2>
 
-                    <br>
-
-                    <button onclick="location.href='#'">Explore <i class="bi bi-caret-right-fill"></i></button>
-
+                    <p>rem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1 rem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1</p>
 
                 </div>
 
                 <div class="banner">
 
-                    <img src="" alt="">
+                    <img src="/assets/pani.png" alt="">
 
                 </div>
 
