--- a/clubs.html
+++ b/clubs.html
@@ -46,7 +46,7 @@
 
                     <div class="club">
 
-                        <img src="" alt="">
+                        <img src="/assets/programmers.webp" alt="">
 
                         <div class="club_details">
                             <img src="/assets/tcs.png" alt="" style="width: 400px;">
@@ -67,7 +67,7 @@
                     <div class="club">
 
                         <div class="club_details">
-                            <img src="/assets/cint.png" alt="">
+                            <img src="/assets/cint.png" alt="" style="width: 350px;">
 
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
 
@@ -75,11 +75,12 @@
 
                         </div>
 
-                        <img src="" alt="">
+                        <img src="/assets/gd.webp" alt="">
 
                     </div>
 
                 </div>
+
             
             </div>
 
