--- a/aboutus.html
+++ b/aboutus.html
@@ -48,7 +48,7 @@
 
                     <div class="member">
 
-                        <img src="" alt="">
+                        <img src="/assets/ash.jpeg" alt="">
                         
                         <div>
 
@@ -63,7 +63,7 @@
 
                     <div class="member">
 
-                        <img src="" alt="">
+                        <img src="/assets/mithun.jpeg" alt="">
                         
                         <div>
 
