--- a/clubs.html
+++ b/clubs.html
@@ -44,6 +44,7 @@
 
                 <div class="clubs">
 
+                    <!-- coding society -->
                     <div class="club">
 
                         <img src="/assets/programmers.webp" alt="">
@@ -51,9 +52,10 @@
                         <div class="club_details">
                             <img src="/assets/tcs.png" alt="" style="width: 400px;">
 
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
-
-                            <button onclick="location.href='#'">Explore <i class="bi bi-caret-right-fill"></i></button>
+                            <p>
+                                The coding society is created to guide students to assist and co-work in technical and non-technical aspects. The society will be in-charge of conducting various events for students such as workshops and competitions to give a platform for students to present their ideas.
+                            </p>
+                            <button onclick="location.href='http://coding.psdc.ml/'">Explore <i class="bi bi-caret-right-fill"></i></button>
 
 
                         </div>
@@ -69,9 +71,9 @@
                         <div class="club_details">
                             <img src="/assets/cint.png" alt="" style="width: 350px;">
 
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+                           <p>Our club is to support and guide students in career development. We take responsibility for conducting innovative events and competitions to build your ideas and skills. This will be a perfect platform for you to shine yourself.</p>
 
-                            <button onclick="location.href='#'">Explore <i class="bi bi-caret-right-fill"></i></button>
+                            <button onclick="location.href='http://cint.psdc.ml/'">Explore <i class="bi bi-caret-right-fill"></i></button>
 
                         </div>
 
