--- a/events.html
+++ b/events.html
@@ -46,7 +46,7 @@
 
                     <div class="event">
 
-                        <img src="/assets/PSDC - Poster.png" alt="" >
+                        <button  onclick="showbutton1()" style="border: none; width: max-content; background-color: rgb(172, 172, 172); padding: 0; margin: 0;"><img src="/assets/PSDC - Poster.png" alt=""></button>
 
                         <div>
 
@@ -92,19 +92,19 @@
 
                 </div>
 
-                <div class="showbanner" id="showbanner1">
+                <div class="showbanner1" id="showbanner1" style="display: none;">
 
                     <img src="/assets/PSDC - Poster.png" alt="">
 
                 </div>
 
-                <div class="showbanner" id="showbanner2">
+                <div class="showbanner2" id="showbanner2" style="display: none;">
 
                     <img src="/assets/PSDC - Poster.png" alt="">
 
                 </div>
 
-                <div class="showbanner" id="showbanner3">
+                <div class="showbanner3" id="showbanner3" style="display: none;">
 
                     <img src="/assets/PSDC - Poster.png" alt="">
 
