--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link href="script.js">
 
+    
+
 </head>
 <body>
 
@@ -45,7 +47,7 @@
                     <h1>PANIMALAR</h1>
                     <h2>STUDENT DEVELOPMENT COMMUNITY</h2>
 
-                    <p>rem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1 rem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1</p>
+                    <p>Welcome to a place where people learn and share knowledge with everyone. A community which helps the student to grow their skills and career to create a bright future ahead.</p>
 
                 </div>
 
