--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>PSDC</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link href="script.js">
 
