--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             
             <div class="newsletter_wrapper">
                 <div class="newsletter_img">
-                    <img src="/assets/newsletter.jpg" alt="">
+                    <img src="/assets/newsletter.jpg" alt="" style="width: 400px;">
                 </div>
                 <div class="newsletter">
 
