--- a/aboutus.html
+++ b/aboutus.html
@@ -52,7 +52,7 @@
                         
                         <div>
 
-                            <h1>Position Name</h1>
+                            <h1>Secretary</h1>
 
                             <h3>R Ashwin</h3>
                             <p>Dept of Computer Science and Business Systems</p>
@@ -67,7 +67,7 @@
                         
                         <div>
 
-                            <h1>Position Name</h1>
+                            <h1>Deputy Secretary</h1>
 
                             <h3>K Mithun Raj</h3>
                             <p>Dept of Computer Science and Business Systems</p>
