--- a/aboutus.html
+++ b/aboutus.html
@@ -58,6 +58,20 @@
                             <p>Dept of Computer Science and Business Systems</p>
 
                         </div>
+
+                        <div class="teamsocials">
+
+                            <a href="https://instagram.com/ashwin3082002"><i class="bi bi-instagram"></i></a>
+
+                            &nbsp;
+
+                            <a href="https://linkedin.com/ashwin3082002"><i class="bi bi-linkedin"></i></a>
+
+                            &nbsp;
+
+                            <a href="https://github.com/ashwin3082002"><i class="bi bi-github"></i></a>
+
+                        </div>
                          
                     </div>
 
@@ -71,6 +85,20 @@
 
                             <h3>K Mithun Raj</h3>
                             <p>Dept of Computer Science and Business Systems</p>
+
+                        </div>
+
+                        <div class="teamsocials">
+
+                            <a href="https://instagram.com/themithunraj"><i class="bi bi-instagram"></i></a>
+
+                            &nbsp;
+
+                            <a href="https://www.linkedin.com/in/mithun-raj-k-1904b220b/"><i class="bi bi-linkedin"></i></a>
+
+                            &nbsp;
+
+                            <a href="https://github.com/kmithunraj"><i class="bi bi-github"></i></a>
 
                         </div>
                          
