Updated Club Website

--- a/clubs.html
+++ b/clubs.html
@@ -73,7 +73,7 @@
 
                            <p>Our club is to support and guide students in career development. We take responsibility for conducting innovative events and competitions to build your ideas and skills. This will be a perfect platform for you to shine yourself.</p>
 
-                            <button onclick="location.href='http://cint.psdc.ml/'">Explore <i class="bi bi-caret-right-fill"></i></button>
+                            <button onclick="location.href='http://career.psdc.ml/'">Explore <i class="bi bi-caret-right-fill"></i></button>
 
                         </div>
 
