Updated Description of Career Club

--- a/clubs.html
+++ b/clubs.html
@@ -71,7 +71,9 @@
                         <div class="club_details">
                             <img src="/assets/cint.png" alt="" style="width: 350px;">
 
-                           <p>Our club is to support and guide students in career development. We take responsibility for conducting innovative events and competitions to build your ideas and skills. This will be a perfect platform for you to shine yourself.</p>
+                           <p>The vision of this club is to curate young minds to enhance their career choices.
+We take obligation for engaging in progressive events and competitions to construct your skills n thoughts 
+This platform can be profoundly utilised to interact with real-world and industries</p>
 
                             <button onclick="location.href='http://career.psdc.ml/'">Explore <i class="bi bi-caret-right-fill"></i></button>
 
