--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://psdc.ml/</title>
-<meta http-equiv="refresh" content="0; URL=https://psdc.ml/">
+<title>Redirecting to https://psdc.org.in/</title>
+<meta http-equiv="refresh" content="0; URL=https://psdc.org.in/">
 <link rel="canonical" href="https://psdc.ml/">
