--- a/verify.html
+++ b/verify.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>Redirection</title>
-      <meta http-equiv = "refresh" content = "url = https://verify.psdc.org.in/" />
+      <meta http-equiv = "refresh" content = "url =0; https://verify.psdc.org.in/" />
    </head>
    <body>
     <div style="text-align: center;">
