--- a/verify.html
+++ b/verify.html
@@ -2,11 +2,11 @@
 <html>
    <head>
       <title>Redirection</title>
-      <meta http-equiv = "refresh" content = "url =0; https://verify.psdc.org.in/" />
+      <meta http-equiv = "refresh" content = "0; url =https://verify.psdc.org.in/" />
    </head>
    <body>
     <div style="text-align: center;">
-      <p><a href="https://verify.psdc.org.in/">Click Here</a>if not redirected...</p>
+      <p><a href="https://verify.psdc.org.in/">Click Here</a> if not redirected...</p>
     </div>
    </body>
 </html>
