--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>PSDC</title>
+    <title>Panimalar Student Development Community</title>
 
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link href="script.js">
+    <meta name="title" content="Panimalar Student Development Community ">
+    <meta name="description" content="A place where panimalar students learn and share knowledge with everyone. A community that helps students of panimalar grow their skills and career to create a bright future.">
+    <meta name="keywords" content="Panimalar, Panimalar Clubs, pec, pec clubs, Panimalar Student Development Community, SDC, Panimalar SDC, Clubs, Clubs in chennai, Students Club, student development, panimalar engineering college, panimalar admission, panimalar college review, panimalar college extra curricular activities, panimalar skill development, panimalar engineering, development club, club at panimalar, college clubs, panimalar, coding, society, psdc, panimalar club, pani, pani club, panimalar tcs, tcs, progamming club, panimalar, progamming club, best club in panimalar, psdc, panimalar student, club at panimalar, society panimalar, college clubs, coding club chennai, chennai clubs, chennai coding, programming club chennai, tcs chennai, tamil nadu, club in tamilnadu, poonamallee clubs, poonamallee coding, college chennai, cultural chennai, college cultural chennai, club chennai, it chennai, chennai computers">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="1 days">
+    <meta name="author" content="Ashwin, Mithun">
+
 
     
 
